<resources>
    <string name="app_name">Shifobaxsh Asal</string>
    <string name="asosiy">Асосий</string>
    <string name="yangiliklar">Янгиликлар</string>
    <string name="kabinet">Кабинет</string>


    <string name="ilovadan_foydalanish_uchun_iltimos_telefon_raqamingizni_kiriting">Иловадан фойдаланиш учун илтимос телефон рақамингизни киритинг</string>
    <string name="mavjud_telefon_raqami">Мавжуд телефон рақамини киритинг!</string>
    <string name="internetga_ulanmagan">Интернетга уланмаган!</string>
    <string name="kod_kelmadi">Код келмади</string>
    <string name="ism_va_familiya">Исм ва фамилия</string>
    <string name="erkak">Эркак</string>
    <string name="ayol">Аёл</string>
    <string name="tasdiqlash_kodi_ushbu_raqamga">Тасдиқлаш коди ушбу рақамга юборилди</string>
    <string name="internetga_boglanish">Интернетга боғланиш</string>
    <string name="qayta_urinish">Қайта уриниш</string>
    <string name="tug_ulgan_sana">Туғилган сана</string>
    <string name="iltimos_ism_va_familiya">Илтимос исм ва фамилияни киритинг!</string>
    <string name="iltimos_tug_ulgan_sanani_tanlang">Илтимос Туғилган санани танланг</string>
    <string name="sms_kod_xato_kiritldi">смс код хато киритилди!</string>
    <string name="mahsulot_savatchaga_qoshildi">Маҳсулот саватчага қўшилди!</string>
    <string name="savatchaga_qo_shish">Саватчага қўшиш</string>
    <string name="to_liq_ma_lumot">Тўлиқ маълумот</string>
    <string name="buyurtma_berish">Буюртма бериш</string>
    <string name="savatchadan_malumot_ochirish">Саватчадан маҳсулотни ўчириш</string>
    <string name="siz_rostdan_ushbu_malumotni_ochir">Сиз ростдан ушбу маҳсулотни ўчирмоқчимисиз?</string>
    <string name="ha">Ҳа</string>
    <string name="yoq">Ёқ</string>
    <string name="umumiy_narx">Умумий нарх: \</string>
    <string name="bonus_miqdorini_kiriting">Бонус миқдорини киритинг</string>
    <string name="bonus_orqali_to_lash_maksimal_50">Бонус орқали тўлаш максимал 50%</string>
    <string name="sotuvchini_tanlang">Сотувчини танланг</string>
    <string name="internet_orqali_harid_qilish">Интернет орқали ҳарид қилиш</string>
    <string name="umumiy_bonuslar">Мавжуд бонуслар</string>
    <string name="to_lanadigan_narx">Тўланадиган нарх</string>
    <string name="ishlatilayotgan_bonus">Ишлатилаётган бонус</string>
    <string name="iltimos_bonus_miqdorini_50_kam">Илтимос бонус миқдорини 50% дан кам киритинг!</string>
    <string name="iltimos_sotuvchi_tanlang">Илтимос сотувчини танланг!</string>
    <string name="tasdiqlash">Тасдиқлаш</string>
    <string name="sizing_buyurtma_qab_qilindi">Буюртмангиз қабул қилинди, ҳаридингиз учун раҳмат</string>
    <string name="buyurtma">Буюртма</string>
    <string name="savdo_tarixi">Савдо тарихи</string>
    <string name="taklif_qiluvchi_link">Таклиф қилувчи url манзил</string>
    <string name="ulashing">Ulashing</string>
    <string name="ushbu_link_orqali_do_stlaringizni_tak">Ушбу url манзил орқали дўстларингизни таклиф қилинг ва уларнинг ҳаридларидан бонусларга эга бўлинг.</string>
    <string name="siz_o_z_bonuslaringizni_mahsulot_sotib_olish_uchun_ishlatishingiz_mumkin">Сиз ўз бонусларингизни маҳсулот сотиб олиш учун ишлатишингиз мумкин</string>
    <string name="mahsulot_soni">маҳсулотлар сони:</string>
    <string name="som">\ сўм</string>
    <string name="iltimos_haridorni_tanlang">Илтимос ҳаридорни танланг!</string>
    <string name="chiqish">Чиқиш</string>
    <string name="siz_rostdan_chiqmoqchimisiz">Сиз ростдан ҳам ушбу профилдан чиқмоқчимисиз?</string>
    <string name="siz_mavjud_bonusdan_koproq_kiritdingiz">Сиз мавжуд бонусдан кўп киритдингиз!</string>
    <string name="internet">Интернет</string>
    <string name="kirish">Кириш</string>
    <string name="profil">Фойдаланувчи маълумотлари</string>
    <string name="royxatdan_otish">Рўйхатдан ўтиш</string>
    <string name="mahsulotlar">Маҳсулотлар</string>
    <string name="savatcha">Саватча</string>
    <string name="haridorni_tanlang">Ҳаридорни танланг</string>
    <string name="kodni_tasdiqlash">Смс кодни тасдиқлаш</string>
    <string name="haridlar_tarixi">Ҳаридлар тарихи</string>
    <string name="jins">Жинс</string>
    <string name="telefon">Телефон</string>
    <string name="affiliate_link">Affiliate link</string>
    <string name="savdodan_keladigan_bonus">Савдодан келадиган бонус</string>
    <string name="sizning_do_stlaringiz">Сизнинг дўстларингиз:</string>
    <string name="bonus">Ишлатилган бонус:</string>
    <string name="bonuslar">Бонуслар</string>
    <string name="about_bonus_title">Ҳурматли фойдаланувчи сиз бизнинг бонусли системамизда қуйидагича бонусларга ега бўлишингиз мумкин</string>
    <string name="about_private_bonus">Бонусларингиз миқдори ҳамда дўстларни таклиф қилиш манзилингизни Кабинет бўлимидан олишингиз мумкин.</string>
    <string name="royxatdan_otganda">1. Рўйхатдан ўтганда</string>
    <string name="bayramlarda">2. Байрамларда</string>
    <string name="bonus_taklif_qilganga">3. Маҳсулот ҳарид қилганда сизни таклиф қилган фойдаланувчига умумий сумманинг </string>
    <string name="bonus_xarid_qilganda">4. Маҳсулот ҳарид қилганда умумий сумманинг </string>
    <string name="tugulgan_kuningizda">5. Туғилган кунингизда</string>
    <string name="boshqa_ko_rsatilmasin">Бошқа кўрсатилмасин</string>
    <string name="batafsil">Батафсил</string>
    <string name="reason_permissions">Иловадан тўлиқ фойдаланиш учун илтимос иловага рухсатларни беринг</string>
    <string name="dostingiz_harididan">Дўстингиз ҳарид қилганда</string>
    <string name="bonuslar_tarixi">Бонуслар тарихи</string>
    <string name="mening_dostlarim">Менинг дўстларим</string>
    <string name="qabul_qilingan_bonus">Қабул қилинган бонус</string>
    <string name="sizni_taklif_qilishdimi">Сизни таклиф қилишдими?</string>
    <string name="taklif_qilgan_do_stingizning_telefon_raqamini_kiriting">Таклиф қилган дўстингизнинг телефон рақамини киритинг (агар мавжуд бўлса)</string>
    <string name="taklif_qilgan_do_stni_qo_shish">Таклиф қилган дўстни қўшиш</string>
    <string name="sizni_taklif_qilgan_do_stingiz_telefon_raqamini_kiriting">Сизни таклиф қилган дўстингиз телефон рақамини киритинг</string>
    <string name="ok">Ок</string>
    <string name="taklif_qiluvchini_qo_shish">Таклиф қилувчини қўшиш</string>
    <string name="taklif_qilgan_dostingizga">6.  Сизни таклиф қилган фойдаланувчига (агар сиз унинг таклиф қилиш URL манзили орқали рўйхатдан ўтсангиз)</string>
    <string name="bekor_qilish">Бекор қилиш</string>


</resources>