<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/taklif_qiluvchini_qo_shish"
            android:padding="12dp"
            android:background="@color/purple_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/sizni_taklif_qilgan_do_stingiz_telefon_raqamini_kiriting"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input_phone_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <com.github.pinball83.maskededittext.MaskedEditText
                    android:id="@+id/phone_input_phone_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:outlineAmbientShadowColor="@color/white"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:mask="+998 ** *** ** **"
                    app:notMaskedSymbol="*" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dialog_btn_cancel"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:text="@string/bekor_qilish"
                    android:textAllCaps="false"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:cornerRadius="12dp"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dialog_btn_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:text="@string/tasdiqlash"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:backgroundTint="@color/purple_500"
                    app:cornerRadius="12dp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>