<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:background="@color/cardGlass"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/savdodan_keladigan_bonus"/>

                <TextView
                    android:id="@+id/cart_select_incoming_bonus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@color/teal_200"
                    android:text="0"
                    android:textStyle="bold"/>



            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardGlass"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:layout_marginVertical="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_marginRight="8dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/umumiy_narx"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/cart_select_totalPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginLeft="8dp"
                        android:gravity="right"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/umumiy_bonuslar"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/cart_select_totalBonus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/teal_200"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:background="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"/>

                <LinearLayout
                    android:layout_marginVertical="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_marginRight="8dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to_lanadigan_narx"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/cart_select_totalPrice_needed_pay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginLeft="8dp"
                        android:gravity="right"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ishlatilayotgan_bonus"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/cart_select_totalBonus_needed_pay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/teal_200"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>


                <View
                    android:background="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bonus_orqali_to_lash_maksimal_50"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cart_select_bonus_tv_layout"
                    style="@style/RegisterInputDropdownStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bonus_miqdorini_kiriting"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeColor="@color/black"
                    app:errorEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/cart_select_bonus_et"
                        style="@style/DropdownStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardGlass"
                android:orientation="vertical"
                android:padding="12dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cart_select_seller_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sotuvchini_tanlang"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:errorEnabled="true">

                    <AutoCompleteTextView
                        android:id="@+id/cart_select_seller"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="true"
                        android:popupTheme="@style/DropdownStyle"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/cart_select_buy_via_internet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/internet_orqali_harid_qilish"
                    android:textSize="16sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cart_select_order_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buyurtma_berish"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:padding="12dp"
            android:layout_margin="12dp"
            app:cornerRadius="12dp"/>


    </LinearLayout>



</ScrollView>